# netdata

./: .env.template  .gitignore  AGENTS.md  CHANGELOG.md  CMakeLists.txt  LICENSE.md  Makefile.am  TODO-HEALTH-DOCS.md  TODO-netflow-memory-footprint.md  TODO.md  configure.ac  netdata.spec.in
.agents/: ENV.md
.github/scripts/: prepare-topology-ip-intel-stock.sh
aclk/: aclk.c  aclk_api.c  aclk_api.h  aclk_query.c
aclk/schema-wrappers/: chart_stream.cc  chart_stream.h  node_info.cc  node_info.h  schema_wrapper_utils.cc  schema_wrapper_utils.h
collectors/: Makefile.am
collectors/cgroups.plugin/: sys_fs_cgroup.c  sys_fs_cgroup.h
collectors/grafana-loki.plugin/: grafana-loki.c
collectors/plugins.d/: plugins_d.h  pluginsd_parser.c  pluginsd_parser.h
collectors/proc.plugin/: ipc.c  proc_net_dev.c
collectors/statsd.plugin/: HTTP_API.md  statsd.c
daemon/: analytics.c  commands.c  global_statistics.c  main.c  service.c  unit_test.c
database/: metric_correlations.c  rrd.h  rrdcalc.c  rrdcalctemplate.c  rrddim.c  rrdhost.c  rrdlabels.c  rrdset.c  rrdsetvar.c
exporting/: exporting_engine.h  process_data.c
health/: health.c  health_json.c  health_log.c
integrations/: categories.yaml  gen_docs_integrations.py  gen_integrations.py
libnetdata/: libnetdata.c  libnetdata.h
packaging/: build-package.sh
parser/: parser.h
src/: Makefile.am  appconfig.c  appconfig.h  common.h  health.h  health_config.c  health_json.c  rrd.h  rrdcalc.c  rrdcalctemplate.c  rrdfile.c  rrdfile.h  rrdhost.c
src/crates/netflow-plugin/: Cargo.toml  README.md  metadata.yaml
src/crates/netflow-plugin/configs/: netflow.yaml
src/crates/netflow-plugin/integrations/: aws_ip_ranges.md  azure_ip_ranges.md  bio-rd_-_ripe_ris.md  bmp_bgp_monitoring_protocol.md  classifiers.md  custom_mmdb_database.md  db-ip_ip_intelligence.md  decapsulation.md  gcp_ip_ranges.md  generic_json-over-http_ipam.md  ipfix.md  iptoasn.md  maxmind_geoip_-_geolite2.md  netbox.md  netflow.md  sflow.md  static_metadata.md
src/crates/netflow-plugin/src/: facet_runtime.rs  main_tests.rs  plugin_config_tests.rs
src/crates/netflow-plugin/src/enrichment/data/geoip/: resolver.rs
src/crates/netflow-plugin/src/ingest/: rebuild.rs
src/crates/netflow-plugin/src/network_sources/: mod.rs  transform.rs
src/crates/netflow-plugin/src/plugin_config/: defaults.rs  runtime.rs
src/crates/netflow-plugin/src/plugin_config/types/: journal.rs
src/crates/netflow-plugin/src/plugin_config/validation/: enrichment.rs  journal.rs
streaming/: receiver.c  rrdpush.c  sender.c
web/: Makefile.am  dashboard.html  dashboard.js
(+544 files in other folders)
