[package]
name = "netflow-plugin"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[[bin]]
name = "netflow-plugin"
path = "src/main.rs"

[dependencies]
anyhow = { workspace = true }
allocative = { workspace = true }
async-trait = { workspace = true }
bitflags = { workspace = true }
bitvec = { workspace = true }
bytesize = { version = "2.3.1", features = ["serde"] }
chrono = { workspace = true }
clap = { workspace = true, features = ["derive"] }
journal-common = { workspace = true }
journal-core = { workspace = true }
journal-engine = { workspace = true }
journal-index = { workspace = true }
journal-log-writer = { workspace = true }
journal-registry = { workspace = true }
humantime = { workspace = true }
humantime-serde = { workspace = true }
hashbrown = "0.17.0"
libc = { workspace = true }
ipnet = { workspace = true }
ipnet-trie = { workspace = true }
itoa = { workspace = true }
jaq-core = "3.0.0"
jaq-json = { version = "2.0.0", features = ["serde"] }
jaq-std = "3.0.0"
maxminddb = "0.27.3"
memchr = { workspace = true }
memmap2 = { workspace = true }
netflow_parser = { workspace = true }
netgauze-bgp-pkt = "0.11.0"
netgauze-bmp-pkt = { version = "0.11.0", features = ["codec"] }
notify = { workspace = true }
roaring = { workspace = true, features = ["allocative"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
sflow-parser = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }
tokio-util = { workspace = true }
tracing = { workspace = true }
regex = { workspace = true }
twox-hash = { workspace = true, features = ["xxhash64"] }
reqwest = { version = "0.13.2", default-features = false, features = ["json", "rustls"] }
schemars = { workspace = true }
socket2 = "0.6.3"
tonic = { workspace = true, features = ["transport", "tls-native-roots"] }
tonic-prost = { workspace = true }
prost = { workspace = true }
rustc-hash = { workspace = true }
thiserror = { workspace = true }
fst = { workspace = true }
rmp-serde = "1.3.1"

rt = { workspace = true }
netdata-plugin-error = { workspace = true }
netdata-plugin-protocol = { workspace = true }

[dev-dependencies]
etherparse = "0.20.1"
pcap-file = { workspace = true }
proptest = { workspace = true }
protoc-bin-vendored = { workspace = true }
tempfile = { workspace = true }
tonic-prost-build = { workspace = true }
uuid = { workspace = true }
